feat: fixed Activities, images, layouts

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,11 @@ allprojects {
         google()
         jcenter()
     }
+
+    ext {
+        androidSupportVersion = "27.1.1"
+
+    }
 }
 
 task clean(type: Delete) {
