--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         <activity android:name=".ui.activities.TopPlacesToSeeActivity" />
         <activity android:name=".ui.activities.PlaceDetailActivity" />
         <activity android:name=".ui.activities.TopPlacesToEatActivity" />
-        <activity android:name=".ui.activities.TopScoringTagForLocationActivity"></activity>
+        <activity android:name=".ui.activities.TopScoringTagForLocationActivity" />
+        <activity android:name=".ui.activities.MainTestActivity"></activity>
     </application>
 
 </manifest>
