--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,11 +30,10 @@
         </activity>
         <activity android:name=".ui.activities.GPSActivity" />
         <activity android:name=".ui.activities.TopPlacesToSeeActivity" />
-        <activity android:name=".ui.activities.PlaceDetailActivity" />
         <activity android:name=".ui.activities.TopPlacesToEatActivity" />
         <activity android:name=".ui.activities.TopScoringTagForLocationActivity" />
-        <activity android:name=".ui.activities.MainTestActivity" />
-        <activity android:name=".ui.activities.CityResultActivity"></activity>
+        <activity android:name=".ui.activities.MainCityActivity" />
+        <activity android:name=".ui.activities.CityResultsActivity"></activity>
     </application>
 
 </manifest>
