--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         <activity android:name=".ui.activities.TopPlacesToEatActivity" />
         <activity android:name=".ui.activities.TopScoringTagForLocationActivity" />
         <activity android:name=".ui.activities.MainCityActivity" />
-        <activity android:name=".ui.activities.CityResultsActivity"></activity>
+        <activity android:name=".ui.activities.CitySearchResultsActivity"></activity>
     </application>
 
 </manifest>
