--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'key0'
+            keyPassword 'wiktor'
+            storeFile file("$rootDir/keystore.jks")
+            storePassword 'wiktor'
+        }
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "pl.futuredev.capstoneproject"
@@ -13,25 +21,21 @@ android {
         buildConfigField("String", "API_KEY", API_KEY)
         buildConfigField("String", "ACCOUNT_ID", ACCOUNT_ID)
     }
-
-
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:support-v13:$androidSupportVersion"
     implementation "com.android.support:exifinterface:$androidSupportVersion"
     implementation "com.android.support:animated-vector-drawable:$androidSupportVersion"
@@ -40,13 +44,10 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$androidSupportVersion"
     implementation "com.android.support:cardview-v7:$androidSupportVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-core:16.0.1'
-
-
     implementation 'com.google.firebase:firebase-auth:16.0.2'
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
 
@@ -55,26 +56,27 @@ dependencies {
         exclude group: 'com.google.android.gms'
         exclude group: 'com.google.firebase'
     }
+
     // Butterknife
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
     implementation 'com.google.android.gms:play-services-places:15.0.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
+
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+
     // OkHttp
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+
     // Gson
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.2'
 
     // Animation Recycler View
     implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
-
     def room_version = "1.1.1"
-
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
 
@@ -83,7 +85,6 @@ dependencies {
 
     // Test helpers
     testImplementation "android.arch.persistence.room:testing:$room_version"
-
     def lifecycle_version = "1.1.1"
 
     // ViewModel and LiveData
@@ -92,6 +93,5 @@ dependencies {
 
     // Android-Debug-Database
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
-
     apply plugin: 'com.google.gms.google-services'
 }
