--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '28.0.2'
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "pl.futuredev.capstoneproject"
         minSdkVersion "$rootProject.minSdkVersion"
@@ -110,6 +110,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
     implementation 'android.arch.persistence.room:rxjava2:1.1.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 
     // Picasso
     implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
