--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-API_KEY="EXAMPLE_API_KEY"
-ACCOUNT_ID="EXAMPLE_ID"
+API_KEY="q0t5ru7awk8inv8fs7c907dbehp4tjlj"
+ACCOUNT_ID="DU1B31NX"
 
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # When configured, Gradle will run in incubating parallel mode.
