--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
 
     // Coroutine Lifecycle Scopes
@@ -69,10 +69,14 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.3.2"
 
     // FirebaseUI for Firebase Auth
-    implementation('com.firebaseui:firebase-ui-auth:4.1.0') {
+    implementation('com.firebaseui:firebase-ui-auth:5.0.0') {
         exclude group: 'com.google.android.gms'
         exclude group: 'com.google.firebase'
     }
+    implementation 'com.google.firebase:firebase-auth:20.0.1'
+    implementation'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.android.gms:play-services-places:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
 
     // Retrofit2
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
@@ -87,7 +91,7 @@ dependencies {
 
     // Animation Recycler View
     implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
-    implementation 'com.google.firebase:firebase-auth:20.0.1'
+
     def room_version = "1.1.1"
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
