--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,14 +79,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.1.0'
 
     // Retrofit2
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
     // OkHttp
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.7.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
 
     // Gson
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.6'
 
     // Animation Recycler View
@@ -109,4 +109,7 @@ dependencies {
     // Activity KTX for viewModels()
     implementation "androidx.activity:activity-ktx:1.2.0-rc01"
     implementation "androidx.fragment:fragment-ktx:1.3.0-rc01"
+
+    // Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
