--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,9 +94,13 @@ dependencies {
     // Animation Recycler View
     implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
 
-    def room_version = "1.1.1"
-    implementation "android.arch.persistence.room:runtime:$room_version"
-    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    // Room
+    def room_version = "2.2.6"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    testImplementation "androidx.room:room-testing:$room_version"
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
